Ajuste das imagens

--- a/cursos/Engenharia da Computação.html
+++ b/cursos/Engenharia da Computação.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Engenharia da Computação</h1>
-      <img src="" alt="" />
+      <img src="../img/engenharia da computação.png" alt="Logo Eng Comp"width="200" height="180"/>
     </header>
     <main>
       <p>
@@ -30,7 +30,7 @@
       </p>
 
       <a href="./Ads.html">Curso antreior</a> <a href="../index.html">Home</a>
-      <a href="#">Proximo curso</a>
+      <a href="./Engenharia de produção.html">Proximo curso</a>
     </main>
   </body>
 </html>
