--- a/cursos/Sistemas de Informação.html
+++ b/cursos/Sistemas de Informação.html
@@ -8,13 +8,18 @@
   <body>
     <header>
       <h1>Sistemas de Informação</h1>
-      <img src="" alt="" />
+      <img
+        src="../img/pagina-da-web.png"
+        alt="Logo pagina-da-web"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
       <p>
-        <strong>O BACHAREL EM SISTEMAS DE INFORMAÇÃO</strong> recebe uma visão ampla das
-        organizações e seus modelos de negócio e de como a tecnologia pode
-        amplificar sua estratégia. <br /><br />
+        <strong>O BACHAREL EM SISTEMAS DE INFORMAÇÃO</strong> recebe uma visão
+        ampla das organizações e seus modelos de negócio e de como a tecnologia
+        pode amplificar sua estratégia. <br /><br />
         Com conteúdo que vai de hardware a inteligência artificial, passando por
         gestão empresarial, o curso abrange conhecimentos de desenvolvimento de
         aplicativos (mobile, games e web), engenharia de software e governança
@@ -29,7 +34,7 @@
 
       <a href="./Jogos Digitais.html">Curso antreior</a>
       <a href="../index.html">Home</a>
-      <a href="#">Proximo curso</a>
+      <a href="./Sistemas para Internet.html">Proximo curso</a>
     </main>
   </body>
 </html>
