--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <body>
     <header>
       <h1>FIAP. O NOVO É AQUI.</h1>
-      <img />
+      <img
+        src="./img/Fiap-logo-novo.jpg"
+        alt="Imagem escrito Fiap"
+        width="200"
+        height="80"
+      />
       <p>
         A FIAP é o centro de excelência em tecnologia mais respeitado do país.
         Uma história que vem sendo construída dia após dia, estimulando mentes a
@@ -22,17 +27,45 @@
       <h2>Conheça os cursos</h2>
 
       <ul>
-        <li><a href="#">Administração</a></li>
-        <li><a href="#">Análise e Desenvolvimento de sistemas</a></li>
-        <li><a href="#">Engenharia da Computação</a></li>
-        <li><a href="#">Engenharia da Produção</a></li>
-        <li><a href="#">Engenharia Mecatrônica</a></li>
-        <li><a href="#">Banco de Dados</a></li>
-        <li><a href="#">Gestão de Tecnologia da Informação</a></li>
-        <li><a href="#">Jogos Digitais</a></li>
-        <li><a href="#">Sistemas de Informação</a></li>
-        <li><a href="#">Sistemas para Internet</a></li>
-        <li><a href="#">Rede de Computadores</a></li>
+        <li><a href="./cursos/Administração.html">Administração</a></li>
+        <li>
+          <a href="./cursos/Ads.html">Análise e Desenvolvimento de sistemas</a>
+        </li>
+        <li>
+          <a href="./cursos/Engenharia da Computação.html"
+            >Engenharia da Computação</a
+          >
+        </li>
+        <li>
+          <a href="./cursos/Engenharia de produção.html"
+            >Engenharia da Produção</a
+          >
+        </li>
+        <li>
+          <a href="./cursos/Engenharia Mecatrônica.html"
+            >Engenharia Mecatrônica</a
+          >
+        </li>
+        <li><a href="./cursos/Banco de Dados.html">Banco de Dados</a></li>
+        <li>
+          <a href="./cursos/Gestão de Tecnologia da Informação.html"
+            >Gestão de Tecnologia da Informação</a
+          >
+        </li>
+        <li><a href="./cursos/Jogos Digitais.html">Jogos Digitais</a></li>
+        <li>
+          <a href="./cursos/Sistemas de Informação.html"
+            >Sistemas de Informação</a
+          >
+        </li>
+        <li>
+          <a href="./cursos/Sistemas para Internet.html"
+            >Sistemas para Internet</a
+          >
+        </li>
+        <li>
+          <a href="./cursos/Rede de Computadores.html">Rede de Computadores</a>
+        </li>
       </ul>
     </main>
   </body>
