--- a/cursos/Administração.html
+++ b/cursos/Administração.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,19 +8,33 @@
   <body>
     <header>
       <h1>Administração</h1>
-      <img src="" alt="" />
+      <img
+        src="../img/Adm.png"
+        alt="Imagem de um administrador"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
-        <p><strong>A FIAP tem o melhor curso de Administração de São Paulo,</strong> primeiro colocado no ENADE. Isso é consequência de um 
-            ambiente de excelência em tecnologia, inovação e empreendedorismo, que desperta nos alunos o pensamento crítico, 
-            engajamento social e os prepara para o mercado de trabalho. 
-            O curso aborda tanto o lado gerencial quanto o lado estratégico de negócios, em disciplinas como: negociação, 
-            liderança e trabalho em equipe, direito empresarial, gestão financeira, gestão de pessoas, marketing, processos e 
-            gestão de TI. 
-            Você será capaz de apoiar e conduzir os principais planos de uma empresa em cenários dinâmicos, competitivos e 
-            tecnológicos.</p>
+      <p>
+        <strong
+          >A FIAP tem o melhor curso de Administração de São Paulo,</strong
+        >
+        primeiro colocado no ENADE. Isso é consequência de um ambiente de
+        excelência em tecnologia, inovação e empreendedorismo, que desperta nos
+        alunos o pensamento crítico, engajamento social e os prepara para o
+        mercado de trabalho. <br /><br />
+        O curso aborda tanto o lado gerencial quanto o lado estratégico de
+        negócios, em disciplinas como: negociação, liderança e trabalho em
+        equipe, direito empresarial, gestão financeira, gestão de pessoas,
+        marketing, processos e gestão de TI. <br /><br />
+        Você será capaz de apoiar e conduzir os principais planos de uma empresa
+        em cenários dinâmicos, competitivos e tecnológicos.
+      </p>
 
-            <a href="#">Curso antreior</a> <a href="../index.html">Home</a> <a href="#">Proximo  curso</a>
+      <a href="./Rede de Computadores.html">Curso antreior</a>
+      <a href="../index.html">Home</a>
+      <a href="./Ads.html">Proximo curso</a>
     </main>
   </body>
 </html>
