--- a/cursos/Ads.html
+++ b/cursos/Ads.html
@@ -3,24 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Administração</title>
+    <title>ADS</title>
   </head>
   <body>
     <header>
       <h1>Análise e Desenvolvimento de sistemas</h1>
-      <img src="" alt="" />
+      <img
+        src="../img/desenvolvimento-web.png"
+        alt="Desenvolvedor trabalhando no computador"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
       <p>
-        Você vai aprender a identificar as necessidades estruturais de um sistema, documentar, criar protótipos e desenvolver 
-para web e mobile utilizando os principais softwares, ferramentas e metodologias do mercado, além de ser capaz de 
-gerenciar projetos e controlar a qualidade de programas. <br/>
-Você vai desenvolver sistemas de alta qualidade e produtividade para web e mobile nas linguagens de programação 
-Java, .NET, Android e Apple iOS, bem como integrar estas plataformas entre si e com outras, tal como Mainframe e SAP.
+        Você vai aprender a identificar as necessidades estruturais de um
+        sistema, documentar, criar protótipos e desenvolver para web e mobile
+        utilizando os principais softwares, ferramentas e metodologias do
+        mercado, além de ser capaz de gerenciar projetos e controlar a qualidade
+        de programas. <br /><br />
+        Você vai desenvolver sistemas de alta qualidade e produtividade para web
+        e mobile nas linguagens de programação Java, .NET, Android e Apple iOS,
+        bem como integrar estas plataformas entre si e com outras, tal como
+        Mainframe e SAP.
       </p>
 
       <a href="./Administração.html">Curso antreior</a>
-      <a href="../index.html">Home</a> <a href="#">Proximo curso</a>
+      <a href="../index.html">Home</a>
+      <a href="./Engenharia da Computação.html">Proximo curso</a>
     </main>
   </body>
 </html>
