--- a/cursos/Banco de Dados.html
+++ b/cursos/Banco de Dados.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Banco de Dados</h1>
-      <img src="" alt="" />
+      <img src="../img/armazenamento-de-banco-de-dados.png" alt="Simbulo de banco de dados" width="200" height="180"/>
     </header>
     <main>
       <p>
@@ -25,9 +25,9 @@ Através do conceito de Big Data, organize as fontes de dados e utilize-as obten
 para a melhoria da operação do seu negócio. 
       </p>
 
-      <a href="./Engenharia de produção.html">Curso antreior</a>
+      <a href="./Engenharia Mecatrônica.html">Curso antreior</a>
       <a href="../index.html">Home</a>
-      <a href="#">Proximo curso</a>
+      <a href="./Gestão de Tecnologia da Informação.html">Proximo curso</a>
     </main>
   </body>
 </html>
