--- a/cursos/Engenharia Mecatrônica.html
+++ b/cursos/Engenharia Mecatrônica.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <header>
-      <h1>Engenharia da Produção</h1>
-      <img src="" alt="" />
+      <h1>Engenharia da Mecatrônica</h1>
+      <img
+        src="../img/processador.png"
+        alt="Logo engenharia Mecatrônica"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
       <p>
@@ -19,20 +24,20 @@
         Mecatrônica surge como uma área emergente da Engenharia que ajuda a
         encontrar soluções originais, integrando Engenharia Elétrica, Engenharia
         Mecânica, Ciência da Computação, Engenharia de Controle e Tecnologia da
-        Informação. <br><br>
-        Nosso curso proporciona a investigação, concepção e
-        implementação de produtos e processos inteligentes e inéditos dentro da
-        Engenharia. Com o objetivo de solucionar problemas reais, você vai criar
-        e realizar um projeto “hands on” por ano, utilizando tecnologias
-        disruptivas como: Inteligência Artificial, Robótica, Sensores, Design,
-        Sistemas Embarcados e Energias Alternativas. Transformar as empresas,
-        aliando empreendedorismo, criatividade e design thinking. Este é o
-        Engenheiro Mecatrônico que a FIAP quer formar.
+        Informação. <br /><br />
+        Nosso curso proporciona a investigação, concepção e implementação de
+        produtos e processos inteligentes e inéditos dentro da Engenharia. Com o
+        objetivo de solucionar problemas reais, você vai criar e realizar um
+        projeto “hands on” por ano, utilizando tecnologias disruptivas como:
+        Inteligência Artificial, Robótica, Sensores, Design, Sistemas Embarcados
+        e Energias Alternativas. Transformar as empresas, aliando
+        empreendedorismo, criatividade e design thinking. Este é o Engenheiro
+        Mecatrônico que a FIAP quer formar.
       </p>
 
       <a href="./Engenharia de produção.html">Curso antreior</a>
       <a href="../index.html">Home</a>
-      <a href="#">Proximo curso</a>
+      <a href="./Banco de Dados.html">Proximo curso</a>
     </main>
   </body>
 </html>
