--- a/cursos/Engenharia de produção.html
+++ b/cursos/Engenharia de produção.html
@@ -8,21 +8,32 @@
   <body>
     <header>
       <h1>Engenharia da Produção</h1>
-      <img src="" alt="" />
+      <img
+        src="../img/robotica.png"
+        alt="Logo da engenharia de produção"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
       <p>
-        <strong>O ENGENHEIRO DE PRODUÇÃO</strong> reúne conhecimentos das áreas de administração, economia e engenharia. O curso foi 
-planejado para incorporar a influência de ferramentas tecnológicas, indispensáveis para gestão de negócios. <br><br>
-A grade privilegia conhecimentos avançados na área de exatas (matemática, ciência e tecnologia) e à formação em 
-aspectos políticos, sociais, ambientais, culturais e de sustentabilidade. <br><br>
-Na FIAP, o futuro engenheiro dispõe de um parque tecnológico avançado, laboratórios de química, informática, 
-fabricação e o Maker Labs, onde você pode ir da ideia ao protótipo, unindo práticas multidisciplinares de mecânica, 
-eletrônica e tecnologia, com impressoras 3D, usinagem, cortadoras laser e fresadoras de precisão.
+        <strong>O ENGENHEIRO DE PRODUÇÃO</strong> reúne conhecimentos das áreas
+        de administração, economia e engenharia. O curso foi planejado para
+        incorporar a influência de ferramentas tecnológicas, indispensáveis para
+        gestão de negócios. <br /><br />
+        A grade privilegia conhecimentos avançados na área de exatas
+        (matemática, ciência e tecnologia) e à formação em aspectos políticos,
+        sociais, ambientais, culturais e de sustentabilidade. <br /><br />
+        Na FIAP, o futuro engenheiro dispõe de um parque tecnológico avançado,
+        laboratórios de química, informática, fabricação e o Maker Labs, onde
+        você pode ir da ideia ao protótipo, unindo práticas multidisciplinares
+        de mecânica, eletrônica e tecnologia, com impressoras 3D, usinagem,
+        cortadoras laser e fresadoras de precisão.
       </p>
 
-      <a href="./Engenharia da Computação.html">Curso antreior</a> <a href="../index.html">Home</a>
-      <a href="#">Proximo curso</a>
+      <a href="./Engenharia da Computação.html">Curso antreior</a>
+      <a href="../index.html">Home</a>
+      <a href="./Engenharia Mecatrônica.html">Proximo curso</a>
     </main>
   </body>
 </html>
