--- a/cursos/Jogos Digitais.html
+++ b/cursos/Jogos Digitais.html
@@ -8,26 +8,37 @@
   <body>
     <header>
       <h1>Jogos Digitais</h1>
-      <img src="" alt="" />
+      <img
+        src="../img/computador.png"
+        alt="Logo jogos Digitais"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
       <p>
-        Você vai ser preparado para desenvolver jogos em todas as plataformas: internet, consoles (Playstation, Xbox e 
-        Nintendo), smartphones (aplicativos para celulares e tablets), desktops (PC e Mac), TV digital, simuladores de realidade 
-        virtual e virtualizações (totem tour virtual). <br><br>
-        Você vai aprender a idealizar e desenvolver um jogo desde o enredo, passando pela criação de personagens, conceitos 
-        de gameficação, ambientes e objetos de cenários. <br><br>
-        A grade contempla conhecimentos de ilustração, programação, inteligência artificial, modelagem 2D e 3D, design, 
-        testes, implantação e gestão. <br><br>
-        Todas as aulas são ministradas em laboratório (inclusive laboratório Apple) com a suíte da Autodesk, utilizada em 
-        Hollywood, o Maya, além das ferramentas líderes do mercado como Photoshop e Unity3D. <br><br>
-        Os professores do curso são especialistas de mercado, com experiência acadêmica, atuantes na área e proprietários de 
-        empresas que desenvolvem jogos.
+        Você vai ser preparado para desenvolver jogos em todas as plataformas:
+        internet, consoles (Playstation, Xbox e Nintendo), smartphones
+        (aplicativos para celulares e tablets), desktops (PC e Mac), TV digital,
+        simuladores de realidade virtual e virtualizações (totem tour virtual).
+        <br /><br />
+        Você vai aprender a idealizar e desenvolver um jogo desde o enredo,
+        passando pela criação de personagens, conceitos de gameficação,
+        ambientes e objetos de cenários. <br /><br />
+        A grade contempla conhecimentos de ilustração, programação, inteligência
+        artificial, modelagem 2D e 3D, design, testes, implantação e gestão.
+        <br /><br />
+        Todas as aulas são ministradas em laboratório (inclusive laboratório
+        Apple) com a suíte da Autodesk, utilizada em Hollywood, o Maya, além das
+        ferramentas líderes do mercado como Photoshop e Unity3D. <br /><br />
+        Os professores do curso são especialistas de mercado, com experiência
+        acadêmica, atuantes na área e proprietários de empresas que desenvolvem
+        jogos.
       </p>
 
       <a href="./Gestão de Tecnologia da Informação.html">Curso antreior</a>
       <a href="../index.html">Home</a>
-      <a href="#">Proximo curso</a>
+      <a href="./Sistemas de Informação.html">Proximo curso</a>
     </main>
   </body>
 </html>
