--- a/cursos/Rede de Computadores.html
+++ b/cursos/Rede de Computadores.html
@@ -8,19 +8,27 @@
   <body>
     <header>
       <h1>Rede de Computadores</h1>
-      <img src="" alt="" />
+      <img
+        src="../img/redes-de-computadores.png"
+        alt="Logo redes-de-computadores"
+        width="200"
+        height="180"
+      />
     </header>
     <main>
       <p>
-        É ministrado em um ambiente que simula uma empresa real, com computadores (SO Linux e Windows), roteadores, 
-switches, cabeamento e demais equipamentos, trazendo a vivência que você precisa para ser competitivo no mercado 
-de trabalho. <br><br> 
-Você vai aprender a dimensionar o uso de equipamentos multiusuários. Configurar acesso e disponibilidade para 
-internet e intranet, roteadores e provedores. Trabalhar com sistemas de gerenciamento de redes, sistemas 
-operacionais e simulação de ambiente de Cloud Computing. E com os novos conhecimentos sobre hardware, software 
-e modos de funcionamento, também vai ser capaz de otimizar o desempenho dos computadores, adequando a 
-estrutura física ao seu potencial de produção, o que aumenta o desempenho. Tudo isso de acordo com as regras de 
-segurança.
+        É ministrado em um ambiente que simula uma empresa real, com
+        computadores (SO Linux e Windows), roteadores, switches, cabeamento e
+        demais equipamentos, trazendo a vivência que você precisa para ser
+        competitivo no mercado de trabalho. <br /><br />
+        Você vai aprender a dimensionar o uso de equipamentos multiusuários.
+        Configurar acesso e disponibilidade para internet e intranet, roteadores
+        e provedores. Trabalhar com sistemas de gerenciamento de redes, sistemas
+        operacionais e simulação de ambiente de Cloud Computing. E com os novos
+        conhecimentos sobre hardware, software e modos de funcionamento, também
+        vai ser capaz de otimizar o desempenho dos computadores, adequando a
+        estrutura física ao seu potencial de produção, o que aumenta o
+        desempenho. Tudo isso de acordo com as regras de segurança.
       </p>
 
       <a href="./Sistemas para Internet.html">Curso antreior</a>
