Feita a parte de meus favoritos

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
           <a href="./cursos/Rede de Computadores.html">Rede de Computadores</a>
         </li>
       </ul>
+      <button>
+        <a href="./Top10/Anuncio.html">Venha conhecer os top 10 sites do dono</a>
+      </button>
     </main>
   </body>
 </html>
