--- a/Top10/Anuncio.html
+++ b/Top10/Anuncio.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top10</title>
+    <title>favoritos</title>
+    <link
+    rel="shortcut icon"
+    type="image/x-icon"
+    href="./img/eu.ico"
+    style="border-radius: 50%"
+  />
   </head>
   <body>
     <header>
