--- a/cursos/Rede de Computadores.html
+++ b/cursos/Rede de Computadores.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rede de Computadores</title>
+    <link
+    rel="shortcut icon"
+    type="image/x-icon"
+    href="./img/eu.ico"
+    style="border-radius: 50%"
+  />
   </head>
   <body>
     <header>
