--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./img/eu.ico"
+      style="border-radius: 50%"
+    />
   </head>
   <body>
     <header>
@@ -68,7 +74,9 @@
         </li>
       </ul>
       <button>
-        <a href="./Top10/Anuncio.html">Venha conhecer os top 10 sites do dono</a>
+        <a href="./Top10/Anuncio.html"
+          >Venha conhecer os top 10 sites do dono</a
+        >
       </button>
     </main>
   </body>
