Criação das Navs

--- a/cursos/Administração.html
+++ b/cursos/Administração.html
@@ -37,10 +37,11 @@
         Você será capaz de apoiar e conduzir os principais planos de uma empresa
         em cenários dinâmicos, competitivos e tecnológicos.
       </p>
-
-      <a href="./Rede de Computadores.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+      <nav>
+      <a href="./Rede de Computadores.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Ads.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
