--- a/cursos/Banco de Dados.html
+++ b/cursos/Banco de Dados.html
@@ -30,10 +30,11 @@ Tudo isso por meio do uso de tecnologias como Big Data, Cloud Computing e Mobili
 Através do conceito de Big Data, organize as fontes de dados e utilize-as obtendo insights que embasem as corporações 
 para a melhoria da operação do seu negócio. 
       </p>
-
-      <a href="./Engenharia Mecatrônica.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Engenharia Mecatrônica.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Gestão de Tecnologia da Informação.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
