--- a/cursos/Engenharia Mecatrônica.html
+++ b/cursos/Engenharia Mecatrônica.html
@@ -40,10 +40,11 @@
         empreendedorismo, criatividade e design thinking. Este é o Engenheiro
         Mecatrônico que a FIAP quer formar.
       </p>
-
-      <a href="./Engenharia de produção.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Engenharia de produção.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Banco de Dados.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
