--- a/cursos/Engenharia da Computação.html
+++ b/cursos/Engenharia da Computação.html
@@ -34,9 +34,11 @@
         protótipos e peças em automação simples e com CNC (Computer Numeric
         Control).
       </p>
-
-      <a href="./Ads.html">Curso antreior</a> <a href="../index.html">Home</a>
+<nav>
+      <a href="./Ads.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Engenharia de produção.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
