--- a/cursos/Engenharia de produção.html
+++ b/cursos/Engenharia de produção.html
@@ -36,10 +36,11 @@
         de mecânica, eletrônica e tecnologia, com impressoras 3D, usinagem,
         cortadoras laser e fresadoras de precisão.
       </p>
-
-      <a href="./Engenharia da Computação.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Engenharia da Computação.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Engenharia Mecatrônica.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
