--- a/cursos/Gestão de Tecnologia da Informação.html
+++ b/cursos/Gestão de Tecnologia da Informação.html
@@ -34,10 +34,11 @@
         recebam a base necessária para atuarem na área de TI de grandes
         empresas.<br /><br />
       </p>
-
-      <a href="./Banco de Dados.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Banco de Dados.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Jogos Digitais.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
