--- a/cursos/Jogos Digitais.html
+++ b/cursos/Jogos Digitais.html
@@ -41,10 +41,11 @@
         acadêmica, atuantes na área e proprietários de empresas que desenvolvem
         jogos.
       </p>
-
-      <a href="./Gestão de Tecnologia da Informação.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Gestão de Tecnologia da Informação.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Sistemas de Informação.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
