--- a/cursos/Rede de Computadores.html
+++ b/cursos/Rede de Computadores.html
@@ -36,10 +36,11 @@
         estrutura física ao seu potencial de produção, o que aumenta o
         desempenho. Tudo isso de acordo com as regras de segurança.
       </p>
-
-      <a href="./Sistemas para Internet.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Sistemas para Internet.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Administração.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
