--- a/cursos/Sistemas de Informação.html
+++ b/cursos/Sistemas de Informação.html
@@ -37,10 +37,11 @@
         empresas, resolvendo problemas por meio de raciocínio lógico e buscando
         solução para os desafios das organizações.
       </p>
-
-      <a href="./Jogos Digitais.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Jogos Digitais.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Sistemas para Internet.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
