--- a/cursos/Ads.html
+++ b/cursos/Ads.html
@@ -33,10 +33,11 @@
         bem como integrar estas plataformas entre si e com outras, tal como
         Mainframe e SAP.
       </p>
-
-      <a href="./Administração.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Administração.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Engenharia da Computação.html">Proximo curso</a>
-    </main>
+    </nav>
+  </main>
   </body>
 </html>
