--- a/cursos/Sistemas para Internet.html
+++ b/cursos/Sistemas para Internet.html
@@ -47,10 +47,11 @@
         sistemas de portais corporativos, portais colaborativos e apps mobile
         para as plataformas Android e iOS.
       </p>
-
-      <a href="./Sistemas de Informação.html">Curso antreior</a>
-      <a href="../index.html">Home</a>
+<nav>
+      <a href="./Sistemas de Informação.html">Curso antreior</a> |
+      <a href="../index.html">Home</a> |
       <a href="./Rede de Computadores.html">Proximo curso</a>
+    </nav>
     </main>
   </body>
 </html>
